add&impl: strategies to increase model performance

--- a/pages/themes/NLP_Basics/examples/SentimentAnalysis/PracticalExample-SimpleSentimentAnalysisModel.ipynb
+++ b/pages/themes/NLP_Basics/examples/SentimentAnalysis/PracticalExample-SimpleSentimentAnalysisModel.ipynb
@@ -1409,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "8f9147bd",
    "metadata": {},
    "outputs": [
@@ -1436,6 +1436,86 @@
     "plt.xlabel('Predicted Label')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bf4d93a",
+   "metadata": {},
+   "source": [
+    "## Strategies to Increase Model Accuracy\n",
+    "\n",
+    "### 1. Data-Centric Strategies (Step 1)\n",
+    "\n",
+    "The most critical factor in the current 50% accuracy is the **extremely small dataset** (30 total reviews, leading to a test set of 6 reviews). In Machine Learning, especially NLP, data quality and quantity are paramount.\n",
+    "\n",
+    "* **Acquire More Data (Crucial):**    \n",
+    "    * **Why:** With only 30 samples, the model is simply memorizing those few examples (*overfitting*) and cannot generalize to unseen data, regardless of how complex the model or preprocessing is.\n",
+    "\n",
+    "    * **Action:** Replace the `create_dataset()` function with one that loads a public, larger, and more realistic sentiment dataset. A good starting point would be [IMDB Dataset of 50K Movie Reviews](https://www.kaggle.com/datasets/lakshmi25npathi/imdb-dataset-of-50k-movie-reviews).\n",
+    "\n",
+    "    We can use: \n",
+    "\n",
+    "    ```python\n",
+    "    \n",
+    "    import kagglehub\n",
+    "\n",
+    "    # Download latest version\n",
+    "    path = kagglehub.dataset_download(\"lakshmi25npathi/imdb-dataset-of-50k-movie-reviews\")\n",
+    "\n",
+    "    print(\"Path to dataset files:\", path)\n",
+    "    ```\n",
+    "    \n",
+    "\n",
+    "* **Ensure Data Balance:**\n",
+    "    * **Action:** Since the sample data is perfectly balanced (15 positive, 15 negative), ensure that whatever larger dataset you adopt maintains a reasonable balance. If it's heavily skewed (e.g., 90% positive), employ **stratified sampling** during the train-test split, which is already done (`stratify=y`).\n",
+    "\n",
+    "### 2. Preprocessing Strategies (Step 2)\n",
+    "\n",
+    "We can enhance the preprocessing robustness for a larger dataset.\n",
+    "\n",
+    "* **Handle Contractions:**\n",
+    "    * **Action:** Add a step to expand common contractions (e.g., \"I'm\" $\\to$ \"I am\", \"don't\" $\\to$ \"do not\"). This ensures tokens like \"do not\" are vectorized consistently, especially since we are carefully preserving negations.\n",
+    "\n",
+    "* **Stemming vs. Lemmatization:**\n",
+    "    * **Action:** We are using the more precise **Lemmatization**. If the dataset is vast, the speed of **Stemming**  might be preferred, but Lemmatization often yields better accuracy, so we will stick with it unless performance is an issue.\n",
+    "\n",
+    "* **Address Repeated Characters (Optional):**\n",
+    "    * **Action:** We can implement a regex to handle repeated characters common in sentiment text (e.g., \"looooved\" $\\to$ \"loved\", \"terribleee\" $\\to$ \"terrible\"). This helps normalize vocabulary.\n",
+    "\n",
+    "### 3. Vectorization Strategies (Step 4)\n",
+    "\n",
+    "The current settings of `TfidfVectorizer` with bigrams are too restrictive for a larger dataset.\n",
+    "\n",
+    "* **Increase `max_features` (Crucial):**\n",
+    "    * **Action:** Increase `max_features` from `100` to a much larger number, such as **10,000** or `None`. With only 100 features, we are throwing away most of the unique words that could contain valuable sentiment information in a larger dataset.\n",
+    "\n",
+    "* **Adjust `ngram_range`:**\n",
+    "    * **Action:** Keep `ngram_range=(1, 2)` (unigrams and bigrams), as bigrams often capture important phrases like \"not good\" or \"very bad.\"  Experiment with `(1, 3)` (including trigrams, to capture phrases like \"money for nothing\").\n",
+    "\n",
+    "### 4. Model & Training Strategies (Step 5)\n",
+    "\n",
+    "* **Tune Logistic Regression Hyperparameters:**\n",
+    "    * **Action:** Use **Cross-Validation** with a grid search (`GridSearchCV` from `sklearn.model_selection`) to find the best hyperparameters for the `LogisticRegression` model.\n",
+    "\n",
+    "* **Try Different Models (Optional):**\n",
+    "    * **Action:** If Logistic Regression doesn't reach the target accuracy, experiment with other classification algorithms like:\n",
+    "        * **Support Vector Machines (SVC):** Excellent for text classification.\n",
+    "        * **Naive Bayes (MultinomialNB):** A very strong, simple baseline for text data.\n",
+    "        * **Ensemble Methods (e.g., RandomForestClassifier):** Can often provide better generalization.\n",
+    "\n",
+    "### 5. Advanced Strategy (Beyond Bag-of-Words)\n",
+    "\n",
+    "Once we have a really large dataset, we can move beyond TF-IDF to modern techniques.\n",
+    "\n",
+    "* **Word Embeddings (Deep Learning):**\n",
+    "    * **Action:** Use pre-trained word embeddings like **Word2Vec** or **GloVe**, or better yet, context-aware embeddings from **BERT** or **RoBERTa**. These models understand the **meaning** of words based on their context, not just their frequency, which is significantly more powerful for sentiment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ad617ab",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
